// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarLayout > renders with as correctly 1`] = `
"<main data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</main>"
`;

exports[`SidebarLayout > renders with b24ui correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col bg-white">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders with class correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col h-dvh">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders with content-bottom slot correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <!--v-if-->
      <!--v-if-->
    </div><!-- Page Bottom -->
    <div data-slot="pageBottomWrapper" class="">Bottom slot</div>
  </div>
</div>"
`;

exports[`SidebarLayout > renders with content-top slot correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <main data-slot="container" class="lg:col-span-12 lg:min-w-0 flex-1 flex flex-col lg:gap-[22px] relative h-full">
        <!-- Page Top -->
        <div data-slot="pageTopWrapper" class="text-(--ui-color-base-1) flex items-center gap-[12px]">Top slot</div>
        <!--v-if-->
        <!--v-if-->
      </main>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders with default correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <main data-slot="container" class="lg:col-span-12 lg:min-w-0 flex-1 flex flex-col lg:gap-[22px] relative h-full">
        <!--v-if-->
        <!--v-if-->
        <!-- Page Content -->
        <div data-content="use-light" data-slot="containerWrapper" class="grow group/layout-content base-mode text-(--ui-color-text-primary) bg-(--ui-color-bg-content-primary) p-6 lg:px-[22px] lg:py-[15px] lg:rounded-(--ui-border-radius-md)">
          <div data-slot="containerWrapperInner" class="size-full">Content</div>
        </div>
      </main>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders with default slot correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <main data-slot="container" class="lg:col-span-12 lg:min-w-0 flex-1 flex flex-col lg:gap-[22px] relative h-full">
        <!--v-if-->
        <!--v-if-->
        <!-- Page Content -->
        <div data-content="use-light" data-slot="containerWrapper" class="grow group/layout-content base-mode text-(--ui-color-text-primary) bg-(--ui-color-bg-content-primary) p-6 lg:px-[22px] lg:py-[15px] lg:rounded-(--ui-border-radius-md)">
          <div data-slot="containerWrapperInner" class="size-full">Default slot</div>
        </div>
      </main>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders with isInner correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex base-mode --inner relative isolate h-full overflow-hidden">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] pb-[20px] lg:pt-0 lg:px-[20px] lg:ps-[20px] lg:pe-[20px]">
      <main data-slot="container" class="lg:col-span-12 lg:min-w-0 flex-1 flex flex-col lg:gap-[22px] mt-0 h-full">
        <!--v-if-->
        <!--v-if-->
        <!-- Page Content -->
        <div data-content="use-light" data-slot="containerWrapper" class="grow group/layout-content base-mode text-(--ui-color-text-primary) bg-(--ui-color-bg-content-primary) p-[20px] rounded-(--ui-border-radius-md)">
          <div data-slot="containerWrapperInner" class="size-full">Content</div>
        </div>
      </main>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders with navbar slot correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <header data-slot="header" class="air-header px-(--content-area-shift) min-h-(--topbar-height) flex items-center gap-x-1 relative">
      <!--v-if-->
      <div data-slot="headerWrapper" class="min-w-0 flex-1 h-full">
        <!-- Navbar -->
        <nav data-slot="root" class="h-full flex-1 flex items-center gap-4">Navbar slot</nav>
      </div>
    </header>
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SidebarLayout > renders without lightContent correctly 1`] = `
"<div data-state="show" data-slot="root" class="sidebar-layout text-label w-full flex --app max-lg:flex-col">
  <!-- isLoading -->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  <!--v-if-->
  <div data-slot="contentWrapper" class="flex-1 flex flex-col lg:pl-0">
    <!--v-if-->
    <div data-slot="pageWrapper" class="flex flex-col lg:grid lg:grid-cols-12 lg:gap-[22px] px-(--content-area-shift)">
      <main data-slot="container" class="lg:col-span-12 lg:min-w-0 flex-1 flex flex-col lg:gap-[22px] relative h-full">
        <!--v-if-->
        <!--v-if-->
        <!-- Page Content -->
        <div data-content="not-set" data-slot="containerWrapper" class="grow group/layout-content">
          <div data-slot="containerWrapperInner" class="size-full">Content</div>
        </div>
      </main>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
